// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PinoHttpLoggerOptionsBuilder must build options with defaults 1`] = `
Object {
  "autoLogging": Object {
    "getPath": [Function],
    "ignorePaths": Array [
      "/metrics",
      "/_healthz",
      "/_readiness",
    ],
  },
  "logger": undefined,
  "reqCustomProps": [Function],
  "wrapSerializers": false,
}
`;

exports[`PinoHttpLoggerOptionsBuilder must build options without defaults 1`] = `
Object {
  "autoLogging": Object {
    "getPath": [Function],
    "ignorePaths": Array [],
  },
  "logger": undefined,
  "reqCustomProps": [Function],
  "wrapSerializers": false,
}
`;
